menambah barier di swagger memubat testing untuk reservation dan room remove product module
